# Brain_Tumor_Classification

./: dvc.yaml  params.yaml  pyproject.toml
data/: .gitignore  raw.dvc
src/: data_process.py  loading.py  model.py  train.py
