[tool.poetry]
name = "brain-tumor-classification"
version = "0.1.0"
description = "Classification of Brain Tumor End to End MLOps"
authors = ["Atunrase Ayo <atunraseayomide@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
keras = "^3.5.0"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
dvc = "^3.55.2"
mlflow = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
